--- a/BootStrap_Assessment/style.css
+++ b/BootStrap_Assessment/style.css
@@ -1,42 +1,16 @@
-#FDM{
-  font-weight: bolder;
-  font-family: Arial, Helvetica, sans-serif;
-  color: rgba(255, 255, 255, 0.836);
-  line-height: 1;
-  margin-top: 0;
-}
+
 body {
   background-color:#89E0F0 ;
   /* margin: 0;
   line-height: 1.5; */
   text-transform: uppercase;
-  line-height: 0.5;
+ 
 }
 
-.digitalHeaven{
-  font-weight: bolder;
-  font-size: x-large;
-  text-align: center;
-  color: rgba(255, 255, 255, 0.836);
-  
+#fancyideas{
+  padding-top: 400px;
 }
 
-.fancyIdeas{
-  text-align: center;
-  color:black;
-  font-family: Arial, Helvetica, sans-serif;
-  margin-top: 300px;
-  font-size: small;
+.fs-2{
+  color: white;
 }
-
-.freeQuote{
-  margin: auto;
-  width: 12em;
-  border: 3px solid white;
-  padding: 5px;
-  color: rgba(255, 255, 255, 0.836);
-  text-align: center;
-  font-weight: 400;
-  font-size: small;
-}
-
